Project bank {
  database_type: 'PostgreSQL'
  Note: '''
    # Bank database
  '''
}

Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  name varchar [not null]
  email varchar [unique, not null]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: `now()`]
}

Table accounts as A {
  id bigserial [pk]
  owner_name varchar [ref: > U.username, not null]
  balance decimal [not null]
  currency varchar [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    owner_name
    (owner_name, currency) [unique]
  }
}

Table transactions {
  id bigserial [pk]
  account_id bigserial [not null, ref: > A.id]
  amount bigdecimal [not null, note: 'must not be 0']
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    account_id
  }
}

Table transfers {
  id bigserial [pk]
  from_account_id bigserial [not null, ref: > A.id]
  to_account_id bigserial [not null, ref: > A.id]
  amount bigdecimal [not null, note: 'must be positive']
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}

Table sessions {
  id uuid [pk]
  username varchar [ref: > U.username, not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}